<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">广州赛科</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="logout">注销</string>
    <string name="back">返回</string>
    <string name="next">下一步</string>
    <string name="all">全部</string>
    <string name="extendlistview_header_hint_normal">下拉刷新</string>
    <string name="extendlistview_header_hint_ready">松开刷新数据</string>
    <string name="extendlistview_header_hint_loading">正在加载...</string>
    <string name="extendlistview_header_last_time">上次更新时间：</string>
    <string name="extendlistview_footer_hint_normal">查看更多</string>
    <string name="extendlistview_footer_hint_ready">松开载入更多</string>
    <string name="loading">加载中...</string>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
    <string name="next_play">已加入下一首播放</string>
    <string name="queue_is_empty">播放队列为空</string>
    <string name="random_play">随机播放</string>
    <string name="loop_play">列表循环</string>
    <string name="play_one">单曲播放</string>
    <string name="exit">退出</string>
    <string name="confirm">ok</string>
    <string name="cancel">取消</string>
    <string name="title_operationtimer">手术正计时</string>
    <string name="en_title_operationtimer">OPERATION TIMING</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="reset">复位</string>
    <string name="pause">暂停</string>
    <string name="title_anestimer">麻醉计时</string>
    <string name="en_title_anestimer">ANESTHESIA TIMER</string>
    <string name="setting">设置</string>
    <string name="air_system">空调系统</string>
    <string name="run">运行</string>
    <string name="fault">故障</string>
    <string name="status_normal">正常</string>
    <string name="fault_modbus">设备连接故障</string>
    <string name="fire_alarm_err">消防报警</string>
    <string name="fire_alarm">消防正常</string>
    <string name="it_power">IT电源正常</string>
    <string name="it_power_err">IT电源报警</string>
    <string name="index_control">综合控制</string>
    <string name="unit_t">℃</string>
    <string name="unit_rh">RH%</string>
    <string name="unit_pa">PA</string>
    <string name="air_value_setting">设定值：</string>
    <string name="launch">启动</string>
    <string name="_pa">负压</string>
    <string name="duty">值班</string>
    <string name="specially_call">专呼\n电话</string>
    <string name="video_call">视频\n通话</string>
    <string name="gas_status">医用气体气压状态</string>
    <string name="err">故障 Error</string>
    <string name="normal">正常 Normal</string>
    <string name="low">过低 Low</string>
    <string name="setting_countdown">倒计时设定</string>
    <string name="sure">确定</string>
    <string name="intensity">亮度</string>
    <string name="setting_smartstart">智能启动设置</string>
    <string name="lighting_1">照明1</string>
    <string name="lighting_2">照明2</string>
    <string name="film_viewer">观片灯</string>
    <string name="intraoperative">手术中</string>
    <string name="shadowless_lamp">无影灯</string>
    <string name="exhaust_fan">排风机</string>
    <string name="writing_counter">书写台</string>
    <string name="air_start_stop">空调启停</string>
    <string name="vacuum_run">负压运行</string>
    <string name="setting_temp">温度设定</string>
    <string name="timer_on">定时开机</string>
    <string name="setting_rh">湿度设定</string>
    <string name="setting_timer_off">定时关机</string>
    <string name="setting_pa">压差设定</string>
    <string name="air">空调</string>
    <string name="setting_title_air">空调参数设置</string>
    <string name="air_value">主站</string>
    <string name="air_ipaddr_2">从站地址</string>
    <string name="gas">气体</string>
    <string name="air_communication">空调通讯</string>
    <string name="air_hard_wired">空调硬接线</string>
    <string name="setting_temp_max">温度设定上限</string>
    <string name="setting_pa_max">压差设定上限</string>
    <string name="setting_temp_min">温度设定下限</string>
    <string name="setting_pa_min">压差设定下限</string>
    <string name="setting_rh_max">湿度设定上限</string>
    <string name="setting_light_delay_closing">照明延时关闭</string>
    <string name="unit_second">s</string>
    <string name="setting_rh_min">湿度设定下限</string>
    <string name="setting_delay_off_timer">停机延时时间</string>
    <string name="hint_username">账户名</string>
    <string name="psw_remember">记住密码</string>
    <string name="psw_forget">忘记密码?</string>
    <string name="select_profile">选择头像</string>
    <string name="username">账户名称：</string>
    <string name="user_psw">设置密码：</string>
    <string name="user_login_time">登录时间：</string>
    <string name="user_pswsure">确认密码：</string>
    <string name="administrator">管理员</string>
    <string name="operator">操作员</string>
    <string name="superadmin">超级管理员</string>
    <string name="setting_language">语言设置</string>
    <string name="setting_about">关于</string>
    <string name="dev_number">设备序号</string>
    <string name="version_update">检查更新</string>
    <string name="system_version">系统版本</string>
    <string name="app_version">应用版本</string>
    <string name="user_clause">使用条款</string>
    <string name="about_developer">开发者：广州市赛科自动化控制设备有限公司</string>
    <string name="about_contact_information">400-8808-309\t\t020-87649819</string>
    <string name="setting_advanced">高级设置</string>
    <string name="setting_stand_by_time">待机时间设置</string>
    <string name="select_timezone">选择时区</string>
    <string name="setting_factory_reset">恢复出厂设置</string>
    <string name="setting_system_reset">系统重启</string>
    <string name="setting_theme">主题颜色</string>
    <string name="setting_valid">有效期设置</string>
    <string name="valid_time">停用时间</string>
    <string name="month_three">3个月</string>
    <string name="month_six">6个月</string>
    <string name="month_twelve">12个月</string>
    <string name="month_twenty_four">24个月</string>
    <string name="month_12">12个月</string>
    <string name="month_18">18个月</string>
    <string name="month_0">长期有效</string>
    <string name="valid_custom">自定义时间</string>
    <string name="setting_wifi">wifi设置</string>
    <string name="wifi_list">可以wifi列表</string>
    <string name="setting_bluetooth">蓝牙</string>
    <string name="device_online">在线</string>
    <string name="device_offline">掉线</string>
    <string name="device_pair">已配对</string>
    <string name="device_nopair">未配对</string>
    <string name="bluetooth_scan_timeout">蓝牙扫描超时</string>
    <string name="bluetooth_scan_finish">蓝牙扫描结束</string>
    <string name="bluetooth_pair_success">蓝牙配对成功</string>
    <string name="bluetooth_pair_fail">蓝牙配对失败</string>
    <string name="bluetooth_pair_loading">蓝牙配对中</string>
    <string name="bluetooth_name">本机名称:</string>
    <string name="wifi_connect">已连接</string>
    <string name="wifi_on_connecting">正在连接</string>
    <string name="wifi_unconnect">未连接</string>
    <string name="wifi_msg_close">WIFI处于关闭状态</string>
    <string name="wifi_msg_connect">wifi连接上了</string>
    <string name="user_non">%1$s账户不存在</string>
    <string name="user_psw_wrong">密码错误</string>
    <string name="msg_user_null">请输入账户名</string>
    <string name="msg_user_pswnull">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="msg_user_pswsurenull">请确认密码</string>
    <string name="msg_user_pswwrong">密码错误，请重新输入</string>
    <string name="msg_user_register_success">注册成功</string>
    <string name="msg_user_register_fail">注册失败</string>
    <string name="hint_userpasw">请输入密码</string>
    <string name="msg_user_register_exit">账户已注册</string>
    <string name="phone_call">视频通话</string>
    <string name="call">呼叫</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="hint_name">请输入名称</string>
    <string name="hint_call_ip">请输入号码</string>
    <string name="msg_name_null">请输入名称</string>
    <string name="msg_ip_null">请输入号码</string>
    <string name="msg_add_fail">添加失败</string>
    <string name="msg_update_success">更新成功</string>
    <string name="msg_add_success">添加成功</string>
    <string name="msg_update_fail">更新失败</string>
    <string name="msg_delete_success">删除成功</string>
    <string name="msg_delete_fail">删除失败</string>
    <string name="operating_room">手术室</string>
    <string name="title_specially_call">专呼电话</string>
    <string name="local">本地</string>
    <string name="music_remote">远程</string>
    <string name="music_bluetooth">蓝牙</string>
    <string name="setting_title_user">用户管理</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="msg_sure_update_valid">您确定需要更改时间吗？</string>
    <string name="setting_system_quit">退出系统</string>
    <string name="msg_quit_system">您确定要退出系统吗？</string>
    <string name="air_new_wind">新风</string>
    <string name="air_new_wind_valve">新风阀</string>
    <string name="air_turn_wind_valve">回风阀</string>
    <string name="air_fire_valve">防火阀</string>
    <string name="air_micropore_muffler">微孔消声器</string>
    <string name="air_turnwind_temprh">回风温湿度</string>
    <string name="air_temprh_setting">温湿度设定</string>
    <string name="air_turn_wind">回风</string>
    <string name="air_first_middle">初中段</string>
    <string name="air_fan">送风机段</string>
    <string name="air_lente">中效段</string>
    <string name="air_surface_cooler">表冷段</string>
    <string name="air_electrical_heating">电加热段</string>
    <string name="air_humidify">加湿段</string>
    <string name="air_mixture">混合段</string>
    <string name="air_first_alarm">初效报警</string>
    <string name="air_lackwind_alarm">缺风报警</string>
    <string name="air_middle_alarm">中效报警</string>
    <string name="air_cold_hot">冷热水阀</string>
    <string name="air_water_turn">回水</string>
    <string name="air_water_send">送水</string>
    <string name="air_high_temperature_circuit_breaker">  高温\n断路器</string>
    <string name="air_wind_send">送风</string>
    <string name="air_efficient_alarm">高效报警</string>
    <string name="air_laminar_smallpox">层流天花</string>
    <string name="air_exhaust_valve">排风阀</string>
    <string name="air_exhaust">排风机</string>
    <string name="music_mode_loop">顺序播放</string>
    <string name="music_mode_shuffle">随机</string>
    <string name="music_mode_one">单曲循环</string>
    <string name="select_pic">头像选择</string>
    <string name="bluetooth_allow">让附近所有蓝牙均可以检测到</string>
    <string name="music_list">歌曲列表</string>
    <string name="air_new_wind_trh">新风温湿度</string>
    <string name="air_humidifier">加湿器</string>
    <string name="air_wind_send_trh">送风温湿度</string>
    <string name="setting_value">设定值：</string>
    <string name="anesmsg">麻醉已超时</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="clear">清空</string>
    <string name="prepare">准备中</string>
    <string name="copyfile">正在复制文件(%1$d/%2$d)</string>
    <string name="scan_noaudio">没有扫描到歌曲</string>
    <string name="scan_finish">复制完成</string>
    <string name="settingtime_valid">自定义时间无效，请重新设置</string>
    <string name="max_delay_light_add">照明延时关闭时间最大值250</string>
    <string name="err_hascamera">无法连接到摄像头</string>
    <string name="modify_psw">修改密码</string>
    <string name="user_logout">退出登录</string>
    <string name="oldpsw">原密码</string>
    <string name="user_newpsw">新密码</string>
    <string name="logintime">%1$d分钟前</string>
    <string name="err_oldpsw">原密码错误</string>
    <string name="err_oldpsw_null">请输入原密码</string>
    <string name="err_newpsw_null">请输入新密码</string>
    <string name="err_newpswsure_null">请确认新密码</string>
    <string name="err_newpswsure">新密码确认错误，请重新确认</string>
    <string name="psw_modify_success">密码修改成功</string>
    <string name="psw_modify_failed">密码修改失败</string>
    <string name="user_info">账户资料</string>
    <string name="no_login">无权操作，请登录操作</string>
    <string name="no_validstop">无权操作，应用已到期</string>
</resources>