<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/txt_title"
        style="@style/Setting_Title"
        android:text="@string/setting_smartstart"/>
    <LinearLayout
        style="@style/Setting_Row_smartstart"
        android:layout_marginTop="72px">
        <LinearLayout
            style="@style/Smartstart_Switch_Cell">

            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:layout_width="96px"
                android:gravity="left"
                android:paddingLeft="32px"
                android:text="@string/lighting_1" />

            <com.keruiyun.saike.uiview.SwitchButton
                android:id="@+id/switch_lighting_1"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_lighting"
                ui:sb_checked="true"
                ui:sb_show_indicator="false"
                ui:sb_checked_color="?attr/custom_attr_app_color_illuminant"/>
        </LinearLayout>
        <LinearLayout
            style="@style/Smartstart_Switch_Cell">
            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:text="@string/lighting_2"
                />

            <com.keruiyun.saike.uiview.SwitchButton
                android:id="@+id/switch_lighting_2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_lighting"
                ui:sb_checked="true"
                ui:sb_show_indicator="false"
                ui:sb_checked_color="?attr/custom_attr_app_color_illuminant"/>
        </LinearLayout>
        <LinearLayout
            style="@style/Smartstart_Switch_Cell">
            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:text="@string/film_viewer"
                />

            <com.keruiyun.saike.uiview.SwitchButton
                android:id="@+id/switch_film_viewer"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_lighting"
                ui:sb_checked="true"
                ui:sb_show_indicator="false"
                ui:sb_checked_color="?attr/custom_attr_app_color_illuminant"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/Setting_Row_smartstart">
        <LinearLayout
            style="@style/Smartstart_Switch_Cell">
            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:layout_width="96px"
                android:text="@string/intraoperative"
                />

            <com.keruiyun.saike.uiview.SwitchButton
                android:id="@+id/switch_intraoperative"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_lighting"
                ui:sb_checked="true"
                ui:sb_show_indicator="false"
                ui:sb_checked_color="?attr/custom_attr_app_color_illuminant"/>
        </LinearLayout>
        <LinearLayout

            style="@style/Smartstart_Switch_Cell">
            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:text="@string/shadowless_lamp"
                />

            <com.keruiyun.saike.uiview.SwitchButton
                android:id="@+id/switch_shadowless_lamp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_lighting"
                ui:sb_checked="true"
                ui:sb_show_indicator="false"
                ui:sb_checked_color="?attr/custom_attr_app_color_illuminant"/>
        </LinearLayout>
        <LinearLayout
            style="@style/Smartstart_Switch_Cell">
            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:text="@string/exhaust_fan"
                />

            <com.keruiyun.saike.uiview.SwitchButton
                android:id="@+id/switch_exhaust_fan"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_lighting"
                ui:sb_checked="true"
                ui:sb_show_indicator="false"
                ui:sb_checked_color="?attr/custom_attr_app_color_illuminant"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/Setting_Row_smartstart">
        <LinearLayout
            style="@style/Smartstart_Switch_Cell">
            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:layout_width="96px"
                android:text="@string/writing_counter"
                />

            <com.keruiyun.saike.uiview.SwitchButton
                android:id="@+id/switch_writing_counter"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_lighting"
                ui:sb_checked="true"
                ui:sb_show_indicator="false"
                ui:sb_checked_color="?attr/custom_attr_app_color_illuminant"/>
        </LinearLayout>
        <LinearLayout
            style="@style/Smartstart_Switch_Cell">
            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:text="@string/air_start_stop"/>

            <com.keruiyun.saike.uiview.SwitchButton
                android:id="@+id/switch_air_start_stop"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_lighting"
                ui:sb_checked="true"
                ui:sb_show_indicator="false"
                ui:sb_checked_color="?attr/custom_attr_app_color_illuminant"/>
        </LinearLayout>
        <LinearLayout

            style="@style/Smartstart_Switch_Cell">
            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:text="@string/vacuum_run"/>

            <com.keruiyun.saike.uiview.SwitchButton
                android:id="@+id/switch_vacuum_run"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_lighting"
                ui:sb_checked="true"
                ui:sb_show_indicator="false"
                ui:sb_checked_color="?attr/custom_attr_app_color_illuminant"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/Setting_Row_smartstart"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:layout_width="wrap_content"
                android:layout_marginLeft="32px"
                android:text="@string/setting_temp"/>
            <ImageView
                android:id="@+id/b_temp_sub"
                style="@style/Smartstart_Setting_imgbutton"
                android:src="@drawable/sk_xtsz_qd_09"/>
            <TextView
                android:id="@+id/txt_value_temp"
                style="@style/Smartstart_Setting_Value"
                android:text="00"
                android:textColor="?attr/custom_attr_app_color_illuminant"/>
            <TextView
                style="@style/Smartstart_Setting_Value_unit"
                android:textColor="?attr/custom_attr_app_color_illuminant"
                android:text="@string/unit_t"/>
            <ImageView
                android:id="@+id/b_temp_add"
                style="@style/Smartstart_Setting_imgbutton"
                android:src="@drawable/sk_xtsz_qd_11"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/txt_value_timer_on_1"
                style="@style/Smartstart_Switch_Tag"
                android:text="@string/timer_on"/>
            <ImageView
                android:id="@+id/b_timer_on_sub"
                style="@style/Smartstart_Setting_imgbutton"
                android:src="@drawable/sk_xtsz_qd_09"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/txt_value_timer_on"
                style="@style/Smartstart_Setting_Value"
                android:text="00:00"
                android:minWidth="72px"
                android:layout_marginLeft="@dimen/margin"
                android:textColor="?attr/custom_attr_app_color_illuminant"/>

            <ImageView
                android:id="@+id/b_timer_on_add"
                style="@style/Smartstart_Setting_imgbutton"
                android:src="@drawable/sk_xtsz_qd_11"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/Setting_Row_smartstart"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:layout_width="wrap_content"
                android:layout_marginLeft="32px"
                android:text="@string/setting_rh"/>
            <ImageView
                android:id="@+id/b_rh_sub"
                style="@style/Smartstart_Setting_imgbutton"
                android:src="@drawable/sk_xtsz_qd_09"/>
            <TextView
                android:id="@+id/txt_value_rh"
                style="@style/Smartstart_Setting_Value"
                android:text="00"
                android:textColor="?attr/custom_attr_app_color_illuminant"/>
            <TextView
                style="@style/Smartstart_Setting_Value_unit"
                android:textColor="?attr/custom_attr_app_color_illuminant"
                android:text="@string/unit_rh"/>
            <ImageView
                android:id="@+id/b_rh_add"
                style="@style/Smartstart_Setting_imgbutton"
                android:src="@drawable/sk_xtsz_qd_11"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/txt_value_timer_off_1"
                style="@style/Smartstart_Switch_Tag"
                android:text="@string/setting_timer_off"/>
            <ImageView
                android:id="@+id/b_timer_off_sub"
                style="@style/Smartstart_Setting_imgbutton"
                android:src="@drawable/sk_xtsz_qd_09"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/txt_value_timer_off"
                style="@style/Smartstart_Setting_Value"
                android:text="00:00"
                android:minWidth="72px"

                android:layout_marginLeft="@dimen/margin"
                android:textColor="?attr/custom_attr_app_color_illuminant"/>

            <ImageView
                android:id="@+id/b_timer_off_add"
                style="@style/Smartstart_Setting_imgbutton"
                android:src="@drawable/sk_xtsz_qd_11"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/Setting_Row_smartstart">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="left"
            android:gravity="center_vertical">
            <TextView
                style="@style/Smartstart_Switch_Tag"
                android:layout_width="wrap_content"
                android:layout_marginLeft="32px"
                android:text="@string/setting_pa"/>
            <ImageView
                android:id="@+id/b_pa_sub"
                style="@style/Smartstart_Setting_imgbutton"
                android:src="@drawable/sk_xtsz_qd_09"/>
            <TextView
                android:id="@+id/txt_value_pa"
                style="@style/Smartstart_Setting_Value"
                android:text="00"
                android:textColor="?attr/custom_attr_app_color_illuminant"/>
            <TextView
                style="@style/Smartstart_Setting_Value_unit"
                android:textColor="?attr/custom_attr_app_color_illuminant"
                android:text="@string/unit_pa"/>
            <ImageView
                android:id="@+id/b_pa_add"
                style="@style/Smartstart_Setting_imgbutton"
                android:src="@drawable/sk_xtsz_qd_11"/>
        </LinearLayout>

    </LinearLayout>




</LinearLayout>
